--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "http-status": "^1.5.2",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
